# trip_planner_backend

./: .gitignore  manage.py  pyproject.toml  requirements.txt
tests/: __init__.py  test_trip_plannner.py
tripplanner/: asgi.py  settings.py  urls.py  wsgi.py
trips/: models.py  serializers.py  urls.py  utils.py  views.py
trips/migrations/: 0001_initial.py
